--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -20,12 +20,13 @@ spec:
         color: blue
     spec:
       containers:
-      - name: devops-el
-        image: shreerakshahr/devops-el:v5
-        ports:
-        - containerPort: 3000
+        - name: devops-el
+          image: harshavardhan873/backend:blue
+          ports:
+            - containerPort: 3000
+          imagePullPolicy: Always
 ---
-# Backend Green Deployment (Idle)
+# Backend Green Deployment (Initially scaled to 0)
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -47,12 +48,13 @@ spec:
         color: green
     spec:
       containers:
-      - name: devops-el
-        image: devops-el:v1
-        ports:
-        - containerPort: 3000
+        - name: devops-el
+          image: harshavardhan873/backend:green
+          ports:
+            - containerPort: 3000
+          imagePullPolicy: Always
 ---
-# Backend Service
+# Backend Service - Points to Blue by default
 apiVersion: v1
 kind: Service
 metadata:
@@ -64,5 +66,5 @@ spec:
     app: devops-el
     color: blue
   ports:
-  - port: 80
-    targetPort: 3000
+    - port: 80
+      targetPort: 3000
